--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,18 @@ li {
 
 .header {
     background-color: rebeccapurple;
-    width: 500px;
-    height: 500px;
-    
+    width: 350px;
+    height: 350px;
+    display: flex;
+    text-align: left;
+    margin: 4em;
+    padding: 1em;
+    flex-direction: column;
+    color: aqua;
+    overflow: scroll;
 }
+/* .header p {
+    display: flex;
+    flex-direction: column-reverse;
+    background-color: aquamarine;
+} */
