--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,35 @@
-li {
-    list-style: none;
+body,
+html,
+#root {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
-.header {
-    background-color: rebeccapurple;
-    width: 350px;
-    height: 350px;
-    display: flex;
-    text-align: left;
-    margin: 4em;
-    padding: 1em;
-    flex-direction: column;
-    color: aqua;
-    overflow: scroll;
+.chat-div {
+  background-color: rgb(18, 0, 58);
+  width: 25em;
+  height: 25em;
+  display: flex;
+  text-align: left;
+  margin: 2em;
+  padding: 1em;
+  flex-direction: column;
+  overflow: scroll;
+  border-radius: 0.25em;
 }
-/* .header p {
-    display: flex;
-    flex-direction: column-reverse;
-    background-color: aquamarine;
-} */
+
+.user-greeting {
+  color: chartreuse;
+}
+
+.sent-messages {
+  color: rgb(255, 0, 221);
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+li {
+  list-style: none;
+}
