--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,22 @@
 body,
 html,
 #root {
+  background-image: linear-gradient(150deg, var(--color1), var(--color6), var(--color1));
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
+  --color1: rgb(32, 0, 39);
+  --color2: rgb(200, 34, 255);
+  --color3: rgb(171, 138, 255);
+  --color4: rgb(0, 255, 242);
+  --color5: rgb(34, 106, 255);
+  --color6: rgb(8, 0, 10);
 }
 
 .chat-div {
-  background-color: rgb(18, 0, 58);
+  background: transparent;
   width: 25em;
   height: 25em;
   display: flex;
@@ -21,7 +29,11 @@ html,
 }
 
 .user-greeting {
-  color: chartreuse;
+  color: var(--color3);
+  font-family: 'Bungee Shade', cursive;
+}
+
+* {
   font-family: 'Bungee Shade', cursive;
 }
 
@@ -29,9 +41,51 @@ html,
   font-family: 'Nixie One', cursive;
   color: rgb(255, 0, 221);
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: row-reverse;
 }
 
 li {
   list-style: none;
+  color: var(--color2);
 }
+
+a {
+  display: flex;
+  align-content: space-around;
+  color: var(--color4);
+  font-size: 1.5em;
+}
+
+button {
+  color: rgb(0, 12, 93);
+  height: 2em;
+  width: 7em;
+  border-radius: 0.25em;
+}
+
+button:hover {
+  cursor: pointer;
+  opacity: 0.4;
+}
+
+form {
+  /* background-color: red; */
+  display: flex;
+  align-items: center;
+  height: 5em;
+  display: flex;
+}
+
+input {
+  background-color: var(--color1);
+  border: none;
+  color: var(--color4);
+  font-family: 'Nixie One', cursive;
+}
+
+/* .scroller {
+  width: 300px;
+  height: 100px;
+  overflow-y: scroll;
+  scrollbar-color: rebeccapurple green;
+} */
