--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ html,
 }
 
 .sent-messages {
-  font-family: 'Nixie One', cursive;
+  font-family: 'Cutive Mono', monospace;
   color: rgb(255, 0, 221);
   display: flex;
   flex-direction: row-reverse;
