--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,21 @@ html,
   --color6: rgb(8, 0, 10);
 }
 
+.profile-div {
+  background: transparent;
+  width: 25em;
+  height: 25em;
+  display: flex;
+  text-align: left;
+  flex-direction: column;
+  border-radius: 0.25em;
+}
+
+.profile-div p {
+  font-family: 'Cutive Mono', monospace;
+  color: rgb(255, 0, 221);
+}
+
 .chat-div {
   background: transparent;
   width: 25em;
@@ -24,7 +39,7 @@ html,
   margin: 2em;
   padding: 1em;
   flex-direction: column;
-  overflow: scroll;
+
   border-radius: 0.25em;
 }
 
@@ -54,6 +69,10 @@ a {
   align-content: space-around;
   color: var(--color4);
   font-size: 1.5em;
+}
+
+h2 {
+  color: var(--color5);
 }
 
 button {
