--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,8 @@ html,
   text-align: left;
   margin: 2em;
   padding: 1em;
-  flex-direction: column;
-  overflow: scroll;
+  flex-direction: column-reverse;
+  overflow-y: scroll;
   overflow-x: hidden;
   border-radius: 0.25em;
 }
