--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 body,
 html,
 #root {
@@ -59,6 +60,8 @@ html,
   color: rgb(255, 0, 221);
   display: flex;
   flex-direction: row-reverse;
+  position: relative;
+  clear: both;
 }
 
 li {
@@ -136,4 +139,31 @@ label {
   display: flex;
   flex-direction: column;
   margin: 1em 1em 1em 1em;
+}
+
+.about-page img {
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+}
+
+.team-profiles {
+  display: flex;
+  flex-direction: row;
+  padding: 1em;
+}
+
+.colter {
+  /* border: 1px solid cyan; */
+  padding: 1em;
+}
+
+.niki {
+  /* border: 1px solid greenyellow; */
+  padding: 1em;
+}
+
+.amaya {
+  /* border: 1px solid magenta; */
+  padding: 1em;
 }
