--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@ body,
 html,
 #root {
   background-image: linear-gradient(150deg, var(--color1), var(--color6), var(--color1));
+  background-repeat: no-repeat;
+  background-size: stretch;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -139,31 +141,4 @@ label {
   display: flex;
   flex-direction: column;
   margin: 1em 1em 1em 1em;
-}
-
-.about-page img {
-  border-radius: 50%;
-  height: 100px;
-  width: 100px;
-}
-
-.team-profiles {
-  display: flex;
-  flex-direction: row;
-  padding: 1em;
-}
-
-.colter {
-  /* border: 1px solid cyan; */
-  padding: 1em;
-}
-
-.niki {
-  /* border: 1px solid greenyellow; */
-  padding: 1em;
-}
-
-.amaya {
-  /* border: 1px solid magenta; */
-  padding: 1em;
 }
