--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 body,
 html,
 #root {
@@ -48,18 +47,19 @@ html,
 
 .user-greeting {
   color: var(--color3);
-  font-family: 'Bungee Shade', cursive;
+  font-family: 'Bungee', cursive;
 }
 
 * {
   font-family: 'Bungee Shade', cursive;
-  color: var(--color2);
+  color: white;
 }
 
 .sent-messages {
   font-family: 'Cutive Mono', monospace;
   color: rgb(255, 0, 221);
   margin: 5px;
+  background-color: rgba(255, 255, 255, 0.083);
 }
 
 li {
@@ -141,4 +141,14 @@ label {
 
 .greeting {
   margin: 15px;
+  font-family: 'Bungee', cursive;
+  color: rgb(122, 255, 34);
+}
+
+.content p {
+  font-family: 'Cutive Mono', monospace;
+}
+
+.content a {
+  margin: 1px;
 }
