--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ html,
   background-size: stretch;
   display: flex;
   align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
   --color1: rgb(32, 0, 39);
@@ -99,6 +100,7 @@ form {
   align-items: center;
   height: 5em;
   display: flex;
+  color: var(--color4);
 }
 
 input {
@@ -110,7 +112,7 @@ input {
 }
 
 label {
-  color: var(--color5);
+  color: var(--color3);
 }
 
 /* .scroller {
@@ -125,6 +127,7 @@ label {
   flex-direction: column;
   padding: 1em;
   align-items: center;
+  color: var(--color5);
 }
 
 .sign-up {
@@ -151,4 +154,51 @@ label {
 
 .content a {
   margin: 1px;
+}
+
+.magic-button {
+  width: 7rem;
+  height: 3rem;
+  font-size: 1.5em;
+  /* color: var(--color4);
+  position: relative;
+  border-radius: 8px;
+  background-color: white; */
+  box-shadow: 0 0 0 1px rgba(0,0,0,.01);
+}
+
+  .magic-button::after {
+    position: absolute;
+    top: 15px;
+    content: "chat";
+    left: 0;
+    right: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    transform: scale(0.9) translateZ(0);
+    filter: blur(15px);
+    background: linear-gradient(
+      to left,
+      #ff5770,
+      #e4428d,
+      #c42da8,
+      #9e16c3,
+      #6501de,
+      #9e16c3,
+      #c42da8,
+      #e4428d,
+      #ff5770
+    );
+    background-size: 200% 200%;
+    animation: animateGlow 1.25s linear infinite;
+  }
+
+@keyframes animateGlow {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 200% 50%;
+  }
 }
