--- a/src/Chat.css
+++ b/src/Chat.css
@@ -10,3 +10,7 @@
     width: 25rem;
     height: 45rem;
 }
+
+.MuiPaper-root MuiPaper-elevation MuiPaper-elevation16 MuiDrawer-paper MuiDrawer-paperAnchorLeft css-4t3x6l-MuiPaper-root-MuiDrawer-paper {
+    background-color: blue;
+}
