--- a/src/App.css
+++ b/src/App.css
@@ -174,10 +174,9 @@ label {
   width: 7rem;
   height: 3rem;
   font-size: 1.5em;
-  /* color: var(--color4);
+  color: var(--color4);
   position: relative;
   border-radius: 8px;
-  background-color: white; */
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.01);
 }
 
@@ -215,10 +214,6 @@ label {
   100% {
     background-position: 200% 50%;
   }
-}
-
-.sidebar {
-  background-color: hotpink;
 }
 
 .user-input {
